hands-on exercise
hands-on exercise

--- a/EuropeanSales.ipynb
+++ b/EuropeanSales.ipynb
@@ -745,8 +745,8 @@
     "summary(model8)\n",
     "\n",
     "# It seems model6 is the best for sales computer sales. \n",
-    "# Because R-squared value higher model8 and similar to model7 but R-squared and Adjusted R-squared values more close than model7\n",
-    "# and p-value is low and it means the model statistically significant. "
+    "# Because R-squared value higher than model8 and similar to model7 but R-squared and Adjusted R-squared values are closer than model7.\n",
+    "# And p-value is low and it means the model statistically significant. "
    ]
   },
   {
