hands-on exercise
hands-on exercise

--- a/EuropeanSales.ipynb
+++ b/EuropeanSales.ipynb
@@ -744,7 +744,7 @@
     "model8 <- lm(ComputerSales ~ Population + UnemploymentRate + EducationSpending , data=EuropeanSales)\n",
     "summary(model8)\n",
     "\n",
-    "# It seems model6 is the best for sales computer sales. \n",
+    "# It seems model6 is the best for computer sales. \n",
     "# Because R-squared value higher than model8 and similar to model7 but R-squared and Adjusted R-squared values are closer than model7.\n",
     "# And p-value is low and it means the model statistically significant. "
    ]
